--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,14 +1,12 @@
 name: Generate pacman animation
 
 on:
-  schedule: # execute every 12 hours
+  schedule: #Every 12 hours
     - cron: "* */12 * * *"
-
   workflow_dispatch:
-
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
@@ -23,8 +21,12 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
 
+      - name: Move graph to dist directory
+        run: |
+          mkdir -p dist
+          mv pacman-contribution-graph.svg dist/
 
-      - name: push pacman-contribution-graph.svg to the output branch
+      - name: Push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
