--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: generate pacman game
+name: Generate pacman animation
 
 on:
-  schedule: # Run automatically every 24 hours
-    - cron: "0 */24 * * *"
-  workflow_dispatch: # Allows manual triggering
-  push: # Runs on every push to the main branch
+  schedule: 
+    - cron: "0 */12 * * *"
+  workflow_dispatch:
+  push:
     branches:
       - main
 
@@ -16,20 +16,20 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
+
+      - name: Debug — list files in workspace
+        run: ls -R
 
       - name: Move graph to dist directory
         run: |
           mkdir -p dist
           mv pacman-contribution-graph.svg dist/
 
-      - name: Push to output branch
+      - name: Push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
