--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Generate pacman animation
+name: generate pacman game
 
 on:
-  schedule: 
-    - cron: "0 */12 * * *"
-  workflow_dispatch:
-  push:
+  schedule: # Run automatically every 24 hours
+    - cron: "0 */24 * * *"
+  workflow_dispatch: # Allows manual triggering
+  push: # Runs on every push to the main branch
     branches:
       - main
 
@@ -16,20 +16,24 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Generate pacman-contribution-graph.svg
+      - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
 
       - name: Debug — list files in workspace
-        run: ls -R
+        run: |
+          echo "Listing files in current directory:"
+          ls -la
+          echo "Looking for any SVGs:"
+          find . -name "*.svg"
 
-      - name: Move graph to dist directory
+      - name: Move SVG to dist
         run: |
           mkdir -p dist
           mv pacman-contribution-graph.svg dist/
 
-      - name: Push pacman-contribution-graph.svg to the output branch
+      - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
