--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: # Allows manual triggering
   push: # Runs on every push to the main branch
     branches:
-      - main
+    - main
 
 jobs:
   generate:
@@ -16,27 +16,33 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate pacman-contribution-graph.svg
-        uses: abozanona/pacman-contribution-graph@main
-        with:
-          github_user_name: ${{ github.repository_owner }}
+    - name: generate pacman-contribution-graph.svg
+      uses: abozanona/pacman-contribution-graph@main
+      with:
+        github_user_name: ${{ github.repository_owner }}
 
-      - name: Debug — list files in workspace
-        run: |
-          echo "Listing files in current directory:"
-          ls -la
-          echo "Looking for any SVGs:"
-          find . -name "*.svg"
+    # Debugging step to check if files are created
+    - name: Debug — list files in workspace
+      run: |
+        echo "Listing files in current directory:"
+        pwd
+        echo "List of files:"
+        ls -la
+        echo "Looking for any SVGs:"
+        find . -name "*.svg"
 
-      - name: Move SVG to dist
-        run: |
-          mkdir -p dist
-          mv pacman-contribution-graph.svg dist/
+    # Move the generated SVGs to dist/ folder
+    - name: Move graph to dist directory
+      run: |
+        mkdir -p dist
+        mv pacman-contribution-graph.svg dist/
+        mv pacman-contribution-graph-dark.svg dist/
 
-      - name: push pacman-contribution-graph.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # Push the generated SVG to the output branch
+    - name: push pacman-contribution-graph.svg to the output branch
+      uses: crazy-max/ghaction-github-pages@v3.1.0
+      with:
+        target_branch: output
+        build_dir: dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
