--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,7 @@ jobs:
         echo "Looking for any SVGs:"
         find . -name "*.svg"
 
-    # Move the generated SVGs to dist/ folder
-    - name: Move graph to dist directory
-      run: |
-        mkdir -p dist
-        mv pacman-contribution-graph.svg dist/
-        mv pacman-contribution-graph-dark.svg dist/
-
-    # Push the generated SVG to the output branch
+    # Push the generated SVG to the output branch (no need to move files)
     - name: push pacman-contribution-graph.svg to the output branch
       uses: crazy-max/ghaction-github-pages@v3.1.0
       with:
