--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: generate pacman-contribution-graph.svg
       uses: abozanona/pacman-contribution-graph@main
       with:
-        github_user_name: ${{ github.repository_owner }}
+        github_user_name: 'nilhouses'#${{ github.repository_owner }}
 
     # Debugging step to check if files are created
     - name: Debug — list files in workspace
